--- a/Application/Admin/View/index/welcome.html
+++ b/Application/Admin/View/index/welcome.html
@@ -1,19 +1,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>MOOC视频网站</title>
+<title>交警执法后台管理系统</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="__PUBLIC__/Admin/css/adminStyle.css" rel="stylesheet" type="text/css" />
-
-<title>MOOC网站管理系统</title>
 <script type="text/javascript" src="__PUBLIC__/Admin/js/jquery1.js"></script>
 <script type="text/javascript">
 	$(document).ready(
 			function() {
 				$(".div2").click(
 						function() {
-							$(this).next("div").slideToggle("slow").siblings(
-									".div3:visible").slideUp("slow");
+							if($(this).next("div").attr("class")=='div3') {
+								$(this).next("div").slideToggle("slow").siblings(
+										".div3:visible").slideUp("slow");
+							}
 						});
 			});
 	function openurl(url) {
@@ -25,12 +25,9 @@
 body {
 	margin: 0;
 	font-family: 微软雅黑;
-	background-image: url(images/.jpg);
-	background-repeat: no-repea;
 	background-size: cover;
 	background-attachment: fixed;
 	background-color: #DDDDDD
-	
 }
 
 .top1 {
@@ -117,60 +114,6 @@ float:left;
 	border-bottom: #ccc 0px dotted;
 }
 
-.spgl {
-	position: absolute;
-	height: 20px;
-	width: 20px;
-	left: 40px;
-	top: 10px;
-	background: url(images/1.png);
-}
-
-.yhgl {
-	position: absolute;
-	height: 20px;
-	width: 20px;
-	left: 40px;
-	top: 10px;
-	background: url(images/4.png);
-}
-
-.gggl {
-	position: absolute;
-	height: 20px;
-	width: 20px;
-	left: 40px;
-	top: 10px;
-	background: url(images/4.png);
-}
-
-.zlgl {
-	position: absolute;
-	height: 20px;
-	width: 20px;
-	left: 40px;
-	top: 10px;
-	background: url(images/4.png);
-}
-
-.pjgl {
-	position: absolute;
-	height: 20px;
-	width: 20px;
-	left: 40px;
-	top: 10px;
-	background: url(images/4.png);
-}
-
-.tcht {
-	position: absolute;
-	height: 20px;
-	width: 20px;
-	left: 40px;
-	top: 10px;
-	background: url(images/2.png);
-}
-
 .div3 {
 	display: none;
 	cursor: pointer;
@@ -204,110 +147,39 @@ float:left;
 </style>
 </head>
 <body>
-
 	<div class="top1">
 		<marquee scrollAmount=2 width=300>数据无价，请谨慎操作！</marquee>
 	</div>
 	<div class="top2">
 		<div class="logo">
-			<img src="__PUBLIC__/Admin/images/admin_logo.png" title="在哪儿" />
+			<img src="__PUBLIC__/Admin/images/jinghui.png" title="警徽" />
 		</div>
 		<div class="title" >
-			<h3>MOOC网站后台管理系统</h3>
+			<h3>交警执法后台管理系统</h3>
 		</div>
 		<div class="fr top-link">
 			<a href="admin_list.html" target="mainCont" title="DeathGhost"><i
 				class="adminIcon"></i><span>管理员：DeathGhost</span></a> 
 		</div>
 	</div>
-
 	<div class="left">
 		<div class="div1">
-			<div class="left_top">
-
-			</div>
-			
-           <div class="div2">
-				<div class="spgl"></div>
-				视频管理
-			</div>
-			<div class="div3">
-				<li><a class="a" href="javascript:void(0);"
-					onClick="openurl('videoQuery.html');">查看所有视频</a></li>
-				<li><a class="a" href="javascript:void(0);"
-					onClick="openurl('uservideoQuery.html');">用户视频列表</a></li>
-			   
-			</div>
-			<div class="div2">
-				<div class="spgl"></div>
-				文档管理
-			</div>
-			<div class="div3">
-				<ul>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('documentQuery.html');">查看所有文档</a></li>
-						<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('userdocumentQuery.html');">用户文档列表</a></li>
-					
-				</ul>
-			</div>
-			<div class="div2">
-				<div class="spgl"></div>
-				类别管理
-			</div>
-			<div class="div3">
-				<ul>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('classQuery.html');">大类信息</a></li>
-						
-				</ul>
-			</div>
-			<div class="div2">
-				<div class="yhgl"></div>
-				用户管理
-			</div>
-			<div class="div3">
-				<ul>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('studentQuery.html');">学生管理</a></li>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('teacherQuery.html');">老师管理</a></li>
-				</ul>
-			</div>
-			
-			<div class="div2">
-				<div class="gggl"></div>
-				评价管理
-			</div>
-			<div class="div3">
-
-				<ul>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('deletecomment.html');">评价删除</a></li>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('useredit.html');">用户禁言</a></li>
-				</ul>
-
-			</div>
-			<div class="div2">
-				<div class="pjgl"></div>
-				公告管理
-			</div>
-			<div class="div3">
-				<ul>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('afficheQuery.html');">查看公告</a></li>
-					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('afficheAdd.html');">添加公告</a></li>
-				</ul>
-			</div>
-			<a class="a1" href="login.html"><div class="div2">
-					<div class="tcht"></div>
-					退出后台
-				</div></a>
+			<div class="left_top"></div>
+			<volist name="menu" id="title" key="i">
+				<if condition="$title.fid eq 0">
+					<div class="div2">{$title.content}</div>
+				</if>
+				<div class="div3">
+				<volist name="menu" id="title2" key="j">
+					<if condition="$title2['fid'] eq $title['id']">
+						<li><a class="a" href="javascript:void(0);" onClick="openurl('videoQuery.html');">{$title2.content}</a></li>
+					</if>
+				</volist>
+				</div>
+			</volist>
+			<a class="a1" href="login.html"><div class="div2">退出后台</div></a>
 		</div>
 	</div>
-
 	<div class="right">
 		<iframe id="rightFrame" name="rightFrame" width="100%" height="100%"
 			scrolling="auto" marginheight="0" marginwidth="0" align="center"
