--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -1073,9 +1073,9 @@
 
 	body {
 		font-size: 13.5pt;
-		font-family: sans-serif;
+		/*font-family: sans-serif;*/
 		background-color: #e3e9dc;
-		font-family: 'Ubuntu Condensed', sans-serif;
+		font-family: '微软雅黑', sans-serif;
 		color: #878e83;
 		letter-spacing: -1px;
 	}
