--- a/Application/Admin/View/index/welcome.html
+++ b/Application/Admin/View/index/welcome.html
@@ -18,6 +18,7 @@
 			});
 	function openurl(url) {
 		var rframe = parent.document.getElementById("rightFrame");
+		console.log(url);
 		rframe.src = url;
 	}
 </script>
@@ -56,7 +57,7 @@ float:left;
 	position: absolute;
 	top: 20px;
 	width: 100%;
-	height: 77px;
+	height: 83px;
 	text-align: center;
 	color: #ccffff;
 	background-color: #888888
@@ -65,7 +66,7 @@ float:left;
 .left {
 	position: absolute;
 	left: 0px;
-	top: 97px;
+	top: 103px;
 	width: 200px;
 	height: 85%;
 	border-right: 1px solid #9370DB;
@@ -78,7 +79,7 @@ float:left;
 .right {
 	position: absolute;
 	left: 200px;
-	top:97px;
+	top:103px;
 	width: 85.2%;
 	height: 85%;
 	border-top: 0px solid #484860;
@@ -159,7 +160,7 @@ float:left;
 		</div>
 		<div class="fr top-link">
 			<a href="admin_list.html" target="mainCont" title="DeathGhost"><i
-				class="adminIcon"></i><span>管理员：DeathGhost</span></a> 
+				class="adminIcon"></i><span>管理员：{$user}</span></a>
 		</div>
 	</div>
 	<div class="left">
@@ -167,23 +168,23 @@ float:left;
 			<div class="left_top"></div>
 			<volist name="menu" id="title" key="i">
 				<if condition="$title.fid eq 0">
-					<div class="div2">{$title.content}</div>
+					<div class="div2"><a class="a" href="javascript:void(0);" onClick="openurl('{$title.url}');">{$title.content}</a></div>
 				</if>
 				<div class="div3">
 				<volist name="menu" id="title2" key="j">
 					<if condition="$title2['fid'] eq $title['id']">
-						<li><a class="a" href="javascript:void(0);" onClick="openurl('videoQuery.html');">{$title2.content}</a></li>
+						<li><a class="a" href="javascript:void(0);" onClick="openurl('{$title2.url}');">{$title2.content}</a></li>
 					</if>
 				</volist>
 				</div>
 			</volist>
-			<a class="a1" href="login.html"><div class="div2">退出后台</div></a>
+			<a class="a1" href="__CONTROLLER__/loginout"><div class="div2">退出后台</div></a>
 		</div>
 	</div>
 	<div class="right">
 		<iframe id="rightFrame" name="rightFrame" width="100%" height="100%"
 			scrolling="auto" marginheight="0" marginwidth="0" align="center"
-			style="border: 0px solid #CCC; margin: 0; padding: 0;"></iframe>
+			style="border: 0px solid #CCC; margin: 0; padding: 0;"  src="__CONTROLLER__/POLICE"></iframe>
 	</div>
 </body>
 </html>
