后台bug修正| app控制器添加| sql law表添加

--- a/Application/Admin/View/index/policeadd.html
+++ b/Application/Admin/View/index/policeadd.html
@@ -63,7 +63,7 @@
         <td class="tableleft">职位</td>
         <td>
             <select name="job"/>
-            <option value="协警">协警</option>
+            <option value="协警">协管</option>
             <option value="警员">警员</option>
             </select>
         </td>
