--- a/Application/Admin/View/index/policeadd.html
+++ b/Application/Admin/View/index/policeadd.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/Css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/Css/bootstrap-responsive.css" />
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/Css/style.css" />
-    <script type="text/javascript" src="__PUBLIC__/Admin/Js/jquery2.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/Js/bootstrap.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/Js/ckform.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/Js/common.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/Js/jquerypicture.js"></script>
+    <!--<script type="text/javascript" src="__PUBLIC__/Admin/Js/jquery2.js"></script>-->
+    <!--<script type="text/javascript" src="__PUBLIC__/Admin/Js/bootstrap.js"></script>-->
+    <!--<script type="text/javascript" src="__PUBLIC__/Admin/Js/ckform.js"></script>-->
+    <!--<script type="text/javascript" src="__PUBLIC__/Admin/Js/common.js"></script>-->
+    <script src="__PUBLIC__/Common/js/jquery/jquery-3.1.1.min.js"></script>
+    <!--<script type="text/javascript" src="__PUBLIC__/Admin/Js/jquerypicture.js"></script>-->
+    <script type="text/javascript" src="__PUBLIC__/Common/js/jquery/jquery.validate.js"></script>
+    <script src="__PUBLIC__/Common/js/jquery/messages_zh.js"></script>
     
     <style type="text/css">
         body {font-size: 20px;
@@ -20,7 +23,6 @@
         .sidebar-nav {
             padding: 9px 0;
         }
-
         @media (max-width: 980px) {
             /* Enable use of floated navbar text */
             .navbar-text.pull-right {
@@ -29,21 +31,60 @@
                 padding-right: 5px;
             }
         }
-
-
+         label.error{
+             position: relative;
+             left:220px;
+             top: -20px;
+             line-height: 0px;
+             color: red;
+             z-index: 50;
+         }
     </style>
+    <script>
+        $(function(){
+            $("#add").validate({
+                rules: {
+                    policename:{
+                        required: true
+                    },
+                    password:{
+                        required:true
+                    },
+                    age: {
+                        required: true
+                    },
+                    area: {
+                        required: true
+                    },
+                    imei: {
+                        required: true,
+                        rangelength:[15,15]
+                    }
+                },
+                messages:{
+                  policename:"请输入姓名",
+                  age:"请输入数字",
+                  area:"请输入片区",
+                  imei:{
+                      required:"请输入硬件编码",
+                      rangelength:"硬件码位数不对"
+                  }
+                }
+            });
+        })
+    </script>
 </head>
 <body>
 <br>
  <font color="#777777"><strong>请填写警员资料：</strong></font>
-<form action="__CONTROLLER__/detail" method="post" class="definewidth m20">
+<form action="__CONTROLLER__/detail" method="post" class="definewidth m20" id="add">
 <table class="table table-bordered table-hover m10" style="margin-left:10px;margin-top:3px;">
    <br>
     <tr>
         <td class="tableleft">警员编号</td>
         <td><input type="text" name="id" value="{$id}" readonly="true"/></td>
         <td class="tableleft">密码</td>
-        <td><input type="text" name="password" value="{$police.password}"/></td>
+        <td><input type="text" name="password" value="{$police.password}"/><label class="error" for="password"></label></td>
     </tr>
 	<tr>
         <td class="tableleft">真实姓名</td>
