--- a/Public/Admin/Css/styles.css
+++ b/Public/Admin/Css/styles.css
@@ -45,8 +45,8 @@ body :-ms-input-placeholder {
   top: 50%;
   left: 0;
   width: 100%;
-  height: 400px;
-  margin-top: -200px;
+  height: 450px;
+  margin-top: -250px;
   overflow: hidden;
 
 }
@@ -59,7 +59,7 @@ body :-ms-input-placeholder {
 .container {
   max-width: 600px;
   margin: 0 auto;
-  padding: 80px 0;
+  padding: 40px 0;
   height: 400px;
   text-align: center;
 }
@@ -86,7 +86,7 @@ form input {
   width: 250px;
   border-radius: 3px;
   padding: 10px 15px;
-  margin: 0 auto 10px auto;
+  margin: 0px auto 30px auto;
   display: block;
   text-align: center;
   font-size: 18px;
