--- a/Application/Admin/View/index/law.html
+++ b/Application/Admin/View/index/law.html
@@ -50,4 +50,12 @@
     {$page}
 
 </body>
+<script>
+    $(function(){
+        $("div").css({
+            'text-align':'center',
+            'margin-top':'20px'
+        })
+    });
+</script>
 </html>
