--- a/Application/Admin/View/car/add_news.html
+++ b/Application/Admin/View/car/add_news.html
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/bootstrap-responsive.css" />
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/style.css" />
-    <script type="text/javascript" src="__PUBLIC__/Admin/js/jquery.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/js/jquery.sorted.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/js/bootstrap.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/js/ckform.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/js/common.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Admin/js/showdate.js"></script>
-    <style type="text/css">
-        body {font-size: 20px;
-             padding-bottom: 40px;
-             background-color:#e9e7ef;
-             font-size:17px;
-        }
-        .sidebar-nav {
-            padding: 9px 0;
-        }
+<title></title>
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/bootstrap-responsive.css" />
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/style.css" />
+<script type="text/javascript" src="__PUBLIC__/Admin/js/jquery.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/js/jquery.sorted.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/js/bootstrap.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/js/ckform.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/js/common.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/js/showdate.js"></script>
+<style type="text/css">
+    body {font-size: 20px;
+         padding-bottom: 40px;
+         background-color:#e9e7ef;
+         font-size:17px;
+    }
+    .sidebar-nav {
+        padding: 9px 0;
+    }
 
-        @media (max-width: 980px) {
-            /* Enable use of floated navbar text */
-            .navbar-text.pull-right {
-                float: none;
-                padding-left: 5px;
-                padding-right: 5px;
-            }
+    @media (max-width: 980px) {
+        /* Enable use of floated navbar text */
+        .navbar-text.pull-right {
+            float: none;
+            padding-left: 5px;
+            padding-right: 5px;
         }
+    }
 
 
-    </style>
-    <script type="text/javascript">
-	    $(function(){
-	    	/*
-			$('#add_button').click(function (){
-				$title=$("input[name='title']").val();
-				$content=$("input[name='content']").val();
-				$time=$("input[name='time']").val();
-				$valid=$("input[name='valid']").val();
-				
-	//			$search=$("input[name='search']").val();
+</style>
+<script type="text/javascript">
+    $(function(){
+    	/*
+		$('#add_button').click(function (){
+			$title=$("input[name='title']").val();
+			$content=$("input[name='content']").val();
+			$time=$("input[name='time']").val();
+			$valid=$("input[name='valid']").val();
 			
-				if($title=='' || $content=='' || $time=='选择时间' || $valid=='选择时间' ){
-					alert('不能为空')
-				}
-			})*/
-			
-			
-		})
-    </script>
+//			$search=$("input[name='search']").val();
+		
+			if($title=='' || $content=='' || $time=='选择时间' || $valid=='选择时间' ){
+				alert('不能为空')
+			}
+		})*/
+		
+		
+	})
+</script>
 </head>
-<form action="addAction" method="post">
+<h1 style="text-align:center">新闻添加</h1>
+<form action="addAction" method="post" style="margin:0 auto">
 <table class="table table-bordered table-hover definewidth m10" style="margin-left:3%;margin-top:2%;">
     <tr>
         <td width="10%" class="tableleft">公告标题</td>
