10/8上午 搜索bug修正

--- a/Application/Admin/View/index/case_detail.html
+++ b/Application/Admin/View/index/case_detail.html
@@ -38,9 +38,9 @@
     </style>
 </head>
 <body>
-<div style="width:100px;height:30px;position: absolute;top:10px;left: 100px;"><button type="button" class="btn btn-primary" id="change">返回</button></div>
+<div style="width:100px;height:30px;position: absolute;top:10px;left: 100px;"><button type="button" class="btn btn-primary" id="back">返回</button></div>
 <if condition="$detail.state eq '申诉'"> <div style="width:100px;height:30px;position: absolute;top:10px;left: 200px;"><button type="button" class="btn btn-primary" id="submit">处理申诉</button></div>
-	<else />
+	<elseif condition="$detail.state eq '修正'" /><div style="width:100px;height:30px;position: absolute;top:10px;left: 200px;"><button type="button" class="btn btn-primary" id="change">处理申诉</button></div>
 </if>
 
 
@@ -133,8 +133,11 @@
 </html>
 <script>
 	$(function(){
+		$("#back").click(function(){
+			history.go(-1);
+		});
 		$("#change").click(function(){
-			window.location.replace('__CONTROLLER__/policeadd');
+			window.location.replace("__CONTROLLER__/policewrite");
 		});
 		$("#submit").click(function(){
 			window.location.replace("__CONTROLLER__/policewrite");
