--- a/Application/Admin/View/index/user.html
+++ b/Application/Admin/View/index/user.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/Css/bootstrap-responsive.css" />
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/Css/style.css" />
     <script type="text/javascript" src="__PUBLIC__/Admin/Js/jquery2.js"></script>
+    <!--<script type="text/javascript" src="__PUBLIC__/Admin/Js/jquery2.sorted.js"></script>-->
     <script type="text/javascript" src="__PUBLIC__/Admin/Js/bootstrap.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Admin/Js/ckform.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Admin/Js/common.js"></script>
 
     <style type="text/css">
         body {font-size: 20px;
+		font-size: 20px;
             padding-bottom: 40px;
             background-color:#e9e7ef;
         }
         .sidebar-nav {
             padding: 9px 0;
         }
-
         @media (max-width: 980px) {
             /* Enable use of floated navbar text */
             .navbar-text.pull-right {
@@ -28,33 +29,43 @@
                 padding-right: 5px;
             }
         }
-
-
     </style>
 </head>
-<body>
-    <form class="form-inline definewidth m20" action="#" method="get">
-        <input type="text" name="menuname" id="menuname" class="abc input-default" placeholder="" value="">&nbsp;&nbsp;
-        <button type="submit" class="btn btn-primary">查询</button>
-    </form>
-    <table class="table table-bordered table-hover definewidth m10">
+<body >
+<form class="form-inline definewidth m20" action="user" method="get">
+    <input type="text" name="search" id="menuname" class="abc input-default" placeholder="输入要查询的用户信息" value="{$search}">&nbsp;&nbsp;
+    <button type="submit" class="btn btn-primary">查询</button>&nbsp;&nbsp;
+</form>
+<table class="table table-bordered table-hover definewidth m10">
+    <thead>
+    <tr>
+        <th>用户id</th>
+        <th>用户姓名</th>
+        <th>用户身份证号</th>
+        <th>注册时间</th>
+        <th>用户电话</th>
+        <th>更多</th>
+    </tr>
+    </thead>
         <volist name="police" id="vo">
-            <if condition="$vo.part eq '0'"><tr style="font-size:25px "><td><b>{$vo.section}</b> &nbsp;&nbsp;{$vo.content}</td></tr>
-                <elseif condition="$vo.strip eq '0'" /><tr><td>&nbsp;&nbsp;&nbsp;{$vo.part}</td></tr>
-                <else/><tr style="font-size: 18px"><td>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<span style="font-family: 楷体">{$vo.strip}</span>:&nbsp;{$vo.content}</td></tr>
-
-            </if>
+            <tr>
+                <td>{$vo.id}</td>
+                <td>{$vo.name}</td>
+                <td>{$vo.idcard}</td>
+                <td>{$vo.regtime}</td>
+                <td>{$vo.phone}</td>
+                <td><a>123</a></td>
+            </tr>
         </volist>
-    </table>
-    {$page}
-
+</table>
+{$page}
 </body>
+</html>
 <script>
     $(function(){
-        $("div").css({
-            'text-align':'center',
-            'margin-top':'20px'
-        })
+       $("div").css({
+           'text-align':'center',
+           'margin-top':'20px'
+       })
     });
 </script>
-</html>
