--- a/Application/Admin/View/index/police.html
+++ b/Application/Admin/View/index/police.html
@@ -36,7 +36,7 @@
     <font color="#777777"><strong>警员信息：</strong></font>
     <input type="text" name="search" id="menuname" class="abc input-default" placeholder="输入要查询的警员信息" value="{$search}">&nbsp;&nbsp;
     <button type="submit" class="btn btn-primary">查询</button>&nbsp;&nbsp; 
-	<button type="button"  id="addnew"><a href="policeadd">添加警员</a></button>
+	<button type="button"  id="addnew"><a href="__CONTROLLER__/policeadd">添加警员</a></button>
 </form>
 <table class="table table-bordered table-hover definewidth m10">
     <thead>
