--- a/Application/Admin/View/index/welcome.html
+++ b/Application/Admin/View/index/welcome.html
@@ -157,9 +157,8 @@ float:left;
 		<div class="title" >
 			<h3>交警执法后台管理系统</h3>
 		</div>
-		<div class="fr top-link">
-			<a href="admin_list.html" target="mainCont" title="DeathGhost"><i
-				class="adminIcon"></i><span>管理员：{$user}</span></a>
+		<div class="fr top-link" style="margin-right:30px">
+			<span>管理员：{$user}</span></a>
 		</div>
 	</div>
 	<div class="left">
