--- a/Application/Admin/View/index/law.html
+++ b/Application/Admin/View/index/law.html
@@ -40,7 +40,7 @@
     <table class="table table-bordered table-hover definewidth m10">
         <tr style="font-size: 33px"><td style="text-align: center;">中华人民共和国交通安全法</td></tr>
         <volist name="police" id="vo">
-            <if condition="$vo.part eq '0'"><tr style="font-size:25px "><td><b>{$vo.section}</b> &nbsp;&nbsp;{$vo.content}</td></tr>
+            <if condition="$vo.part eq '0'"><tr style="font-size:25px;"><td><b>{$vo.section}</b> &nbsp;&nbsp;{$vo.content}</td></tr>
                 <elseif condition="$vo.strip eq '0'" /><tr><td>&nbsp;&nbsp;&nbsp;{$vo.part}</td></tr>
                 <else/><tr style="font-size: 18px"><td>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<span style="font-family: 楷体">{$vo.strip}</span>:&nbsp;{$vo.content}</td></tr>
 
