--- a/Application/Admin/View/index/case_detail.html
+++ b/Application/Admin/View/index/case_detail.html
@@ -131,6 +131,13 @@
 			<td height="28" align="center">硬件编号：</td>
 			<td height="28">{$police.imei}</td>
 		</tr>
+		<tr>
+			<th colspan="2"><h3><strong >违法证据：</strong></h3></th>
+		</tr>
+		<tr>
+			<td><img src="__PUBLIC__/app/{$evidence}"></td>
+
+		</tr>
 	</table>
 </div>
 </body>
