news 表更新| police界面文字修改

--- a/Application/Admin/View/index/police.html
+++ b/Application/Admin/View/index/police.html
@@ -60,7 +60,9 @@
                 <td>{$vo.area}</td>
                 <td>{$vo.job}</td>
                 <td>{$vo.imei}</td>
-                <td>{$vo.state}</td>
+                <if condition="$vo.state eq 'normal'"><td>在职</td>
+                <elseif condition="$vo.state eq 'quit'"/><td>离职</td>
+                </if>
             </tr>
         </volist>
 </table>
