--- a/Application/Admin/View/index/law.html
+++ b/Application/Admin/View/index/law.html
@@ -19,7 +19,6 @@
         .sidebar-nav {
             padding: 9px 0;
         }
-
         @media (max-width: 980px) {
             /* Enable use of floated navbar text */
             .navbar-text.pull-right {
@@ -28,16 +27,16 @@
                 padding-right: 5px;
             }
         }
-
+        .highlight { background: yellow; color: red; }
 
     </style>
 </head>
 <body>
-    <form class="form-inline definewidth m20" action="#" method="get">
-        <input type="text" name="menuname" id="menuname" class="abc input-default" placeholder="" value="">&nbsp;&nbsp;
-        <button type="submit" class="btn btn-primary">查询</button>
+    <form class="form-inline definewidth m20" action="#" method="get" id="search_box" style="z-index: 10">
+        <input type="text" name="search" id="search" class="abc input-default" placeholder="请输入要查询的内容" >&nbsp;&nbsp;
+        <input type="button" class="btn btn-primary" id="button" value="查询"/>
     </form>
-    <table class="table table-bordered table-hover definewidth m10">
+    <table class="table table-bordered table-hover definewidth m10" id="content">
         <tr style="font-size: 33px"><td style="text-align: center;">中华人民共和国交通安全法</td></tr>
         <volist name="police" id="vo">
             <if condition="$vo.part eq '0'"><tr style="font-size:25px;"><td><b>{$vo.section}</b> &nbsp;&nbsp;{$vo.content}</td></tr>
@@ -55,7 +54,137 @@
         $("div").css({
             'text-align':'center',
             'margin-top':'20px'
-        })
+        });
+        $.fn.fixDiv = function(options) {
+            var defaultVal = {
+                top: 10
+            };
+            var obj = $.extend(defaultVal, options);
+            $this = this;
+            var _top = $this.offset().top;
+            var _left = $this.offset().left;
+            $(window).scroll(function() {
+                var _currentTop = $this.offset().top;
+                var _scrollTop = $(document).scrollTop();
+                if (_scrollTop > _top) {
+                    $this.offset({
+                        top: _scrollTop + obj.top,
+                        left: _left
+                    });
+                } else {
+                    $this.offset({
+                        top: _top,
+                        left: _left
+                    });
+                }
+            });
+            return $this;
+        };
+        $("#search_box").fixDiv({ top: 0 });
+        $('#button').click(highlight);//点击search时，执行highlight函数；
+        $('#search').keydown(function (e) {
+            var key = e.which;
+            if (key == 13) highlight();
+        });
+        var i = 0;
+        var sCurText;
+        function highlight(){
+            clearSelection();//先清空一下上次高亮显示的内容；
+
+            var flag = 0;
+            var bStart = true;
+
+            $('#tip').text('');
+            $('#tip').hide();
+            var searchText = $('#search').val();
+            var _searchTop = $('#search').offset().top+30;
+            var _searchLeft = $('#search').offset().left;
+            if($.trim(searchText)==""){
+                showTips("请输入查找车站名",_searchTop,3,_searchLeft);
+                return;
+            }
+            //查找匹配
+            var regExp = new RegExp(searchText, 'g');//创建正则表达式，g表示全局的，如果不用g,则查找到第一个就不会继续向下查找了；
+            var content = $("#content").text();
+            if (!regExp.test(content)) {
+                showTips("没有找到要查找的车站",_searchTop,3,_searchLeft);
+                return;
+            } else {
+                if (sCurText != searchText) {
+                    i = 0;
+                    sCurText = searchText;
+                }
+            }
+            //高亮显示
+            $('td').each(function(){
+                var html = $(this).html();
+                //将找到的关键字替换，加上highlight属性；
+                var newHtml = html.replace(regExp, '<span class="highlight">'+searchText+'</span>');
+                $(this).html(newHtml);//更新；
+                flag = 1;
+            });
+
+            //定位并提示信息
+            if (flag == 1) {
+                if ($(".highlight").size() > 1) {
+                    var _top = $(".highlight").eq(i).offset().top+$(".highlight").eq(i).height();
+                    var _tip = $(".highlight").eq(i).parent().find("strong").text();
+                    if(_tip=="") _tip = $(".highlight").eq(i).parent().parent().find("strong").text();
+                    var _left = $(".highlight").eq(i).offset().left;
+                    var _tipWidth = $("#tip").width();
+                    if (_left > $(document).width() - _tipWidth) {
+                        _left = _left - _tipWidth;
+                    }
+                    $("#tip").html(_tip).show();
+                    $("#tip").offset({ top: _top, left: _left });
+                    $("#button").val("查询下一处");
+                }else{
+                    var _top = $(".highlight").offset().top+$(".highlight").height();
+                    var _tip = $(".highlight").parent().find("strong").text();
+                    var _left = $(".highlight").offset().left;
+                    $('#tip').show();
+                    $("#tip").html(_tip).offset({ top: _top, left: _left });
+                }
+                $("html, body").animate({ scrollTop: _top - 90 });
+                i++;
+                if (i > $(".highlight").size() - 1) {
+                    i = 0;
+                }
+            }
+        }
+        function clearSelection(){
+            $('td').each(function(){
+                //找到所有highlight属性的元素；
+                $(this).find('.highlight').each(function(){
+                    $(this).replaceWith($(this).html());//将他们的属性去掉；
+                });
+            });
+        }
+        var tipsDiv = '<div class="tipsClass"></div>';
+        $( 'body' ).append( tipsDiv );
+        function showTips( tips, height, time,left ){
+            var windowWidth = document.documentElement.clientWidth;
+            $('.tipsClass').text(tips);
+            $( 'div.tipsClass' ).css({
+                'top' : height + 'px',
+                'left' :left + 'px',
+                'position' : 'absolute',
+                'padding' : '8px 6px',
+                'background': '#000000',
+                'font-size' : 14 + 'px',
+                'font-weight': 900,
+                'margin' : '0 auto',
+                'text-align': 'center',
+                'width' : 'auto',
+                'color' : '#fff',
+                'border-radius':'2px',
+                'opacity' : '0.8' ,
+                'box-shadow':'0px 0px 10px #000',
+                '-moz-box-shadow':'0px 0px 10px #000',
+                '-webkit-box-shadow':'0px 0px 10px #000'
+            }).show();
+            setTimeout( function(){$( 'div.tipsClass' ).fadeOut();}, ( time * 1000 ) );
+        }
     });
 </script>
 </html>
